Added JS functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,16 +7,11 @@
         <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
-        <div id = 'chatbox'>
-            <h2>AI Therapist</h2>
+        <div id="chatbox"></div>
 
-            <div id="chat" class="chat-history">
-            </div>
-
-            <div id="input-area">
-                <input type="text" id="input" placeholder="How are you feeling today?" style="width: 80%;">
-                <button onclick="sendMessage()">Send</button>
-            </div>
+        <div id="userInput">
+            <input id="textInput" type="text" placeholder="Type your message...">
+            <button id="buttonInput">Send</button>
         </div>
         <script src="/static/script.js"></script>
     </body>
