Centered the text box and the text input boxes

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>
-            Therapist Chatbot
-        </title>
-        <link rel="stylesheet" href="/static/style.css">
-    </head>
-    <body>
+<head>
+    <title>Therapist Chatbot</title>
+    <link rel="stylesheet" href="../static/style.css">
+</head>
+<body>
+    <div class="mainContainer">
+        <h2>Therapist Chatbot</h2>
         <div id="chatbox"></div>
-
         <div id="userInput">
             <input id="textInput" type="text" placeholder="Type your message...">
             <button id="buttonInput">Send</button>
         </div>
-        <script src="/static/script.js"></script>
-    </body>
+    </div>
+    <script src="../static/script.js"></script>
+</body>
 </html>
