--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <title>Therapist Chatbot</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="mainContainer">
@@ -13,6 +14,6 @@
             <button id="buttonInput">Send</button>
         </div>
     </div>
-    <script src="../static/script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
