--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <title>Therapist Chatbot</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="../static/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
 <body>
     <div class="mainContainer">
@@ -14,6 +15,6 @@
             <button id="buttonInput">Send</button>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="../static/script.js"></script>
 </body>
 </html>
