--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
-<body>
+<body onload="getInitialGreeting()">
     <div class="mainContainer">
         <h2>Therapist Chatbot</h2>
         <div id="chatbox"></div>
