Modified the login page

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <h2>Therapist Chatbot</h2>
         <div id="chatbox"></div>
         <div id="userInput">
-            <input id="textInput" type="text" placeholder="Type your message...">
+            <input class="textInput" type="text" placeholder="Type your message...">
             <button id="buttonInput">Send</button>
         </div>
     </div>
