--- a/templates/login.html
+++ b/templates/login.html
@@ -3,15 +3,20 @@
         <title>Login</title>
         <link rel="stylesheet" href="../static/style.css">
     </head>
-    <body>
-        <div class="mainContainer">
-            <h2>Login to Therapist Chatbot</h2>
-            <form method="POST" action="/login">
-                <input class="textInput" type="text" name="username" placeholder="Username" required><br><br>
-                <input class="textInput" type="password" name="password" placeholder="Password" required><br><br>
+    <<body>
+        <div class="loginContainer">
+            <h2>Login</h2>
+            <form method="POST" action="/login" class="loginForm">
+                <div class="formRow">
+                    <label for="username">Username:</label>
+                    <input class="textInput" type="text" id="username" name="username" required>
+                </div>
+                <div class="formRow">
+                    <label for="password">Password:</label>
+                    <input class="textInput" type="password" id="password" name="password" required>
+                </div>
                 <button id="buttonInput" type="submit">Login</button>
             </form>
         </div>
-        <script src="../static/script.js"></script>
     </body>
 </html>
