Fixed bug in the labeling of HTML tags

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,11 +9,11 @@
             <form method="POST" action="/login" class="loginForm">
                 <div class="formRow">
                     <label for="username">Username:</label>
-                    <input class="textInput" type="text" id="username" name="username" required>
+                    <input id="textInput" type="text" id="username" name="username" required>
                 </div>
                 <div class="formRow">
                     <label for="password">Password:</label>
-                    <input class="textInput" type="password" id="password" name="password" required>
+                    <input id="textInput" type="password" id="password" name="password" required>
                 </div>
                 <button id="buttonInput" type="submit">Login</button>
             </form>
