--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
         <title>Login</title>
         <link rel="stylesheet" href="../static/style.css">
     </head>
-    <<body>
+    <body>
         <div class="loginContainer">
             <h2>Login</h2>
             <form method="POST" action="/login" class="loginForm">
@@ -17,6 +17,10 @@
                 </div>
                 <button id="buttonInput" type="submit">Login</button>
             </form>
+            <p style="margin-top: 15px;">
+                Don’t have an account? <a href="/register">Create one</a>
+            </p>
+            
         </div>
     </body>
 </html>
