--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>Therapist Chatbot</title>
     <link rel="stylesheet" href="../static/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
 <body onload="getInitialGreeting()">
