Added a page to edit profiles

--- a/static/style.css
+++ b/static/style.css
@@ -109,7 +109,7 @@ h2 {
 }
 
 /* Text input field */
-#textInput, #username, #password, #confirmPassword {
+#textInput, #username, #password, #confirmPassword,#age,#location,#occupation,#gender {
     flex: 1;
     padding: 10px;
     border-radius: 8px;
