--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,7 +22,7 @@
                 <input type="password" id="confirmPassword" name="confirm_password" required>
             </div>
             <p id="passwordError" class="error"></p>
-            <button type="submit" id="submitBtn" disabled>Register</button>
+            <button type="submit" id="buttonInput" disabled>Register</button>
         </form>
         <p style="margin-top: 15px;">
             Already have an account? <a href="/login">Back to login</a>
