--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
             <button id="buttonInput">Send</button>
         </div>
     </div>
+    <button id="topRightBtn" class="btn" onclick="window.location.href='/edit-profile'">Edit Profile</button>
     <script src="../static/script.js"></script>
 </body>
 </html>
