--- a/templates/login.html
+++ b/templates/login.html
@@ -18,9 +18,9 @@
                 <button id="buttonInput" type="submit">Login</button>
             </form>
             <p style="margin-top: 15px;">
-                Don’t have an account? <a href="/register">Create one</a>
+                Don’t have an account? <a href="/signup">Create one</a>
             </p>
-            
+
         </div>
     </body>
 </html>
