--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -28,7 +28,7 @@
             <button type="submit" id="buttonInput">Save</button>
         </form>
         <p style="margin-top: 15px;">
-            <a href="/">Back to Chat</a>
+            <a href="/chat">Back to Chat</a>
         </p>
     </div>
 </body>
