--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
-<body onload="getInitialGreeting()">
+<body id="index" onload="getInitialGreeting()">
     <div class="mainContainer">
         <h2>Therapist Chatbot</h2>
         <div id="chatbox"></div>
