--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
         <title>Login</title>
         <link rel="stylesheet" href="../static/style.css">
     </head>
-    <body>
+    <body id = "settings">
         <div class="loginContainer">
             <h2>Login</h2>
             <form method="POST" action="/login" class="loginForm">
