--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <script src="../static/signup.js"></script>
 </head>
-<body>
+<body id = "settings">
     <div class="loginContainer">
         <h2>Create an Account</h2>
         <form id="registrationForm" method="POST" action="/register" class="loginForm">
