--- a/static/style.css
+++ b/static/style.css
@@ -134,10 +134,6 @@ body#settings {
     background-color: #387ac1;
 }
 
-#buttonInput {
-    flex-grow: 3;
-}
-
 #submitBtn {
     flex-grow: 1;
 }
@@ -164,9 +160,6 @@ body#settings {
     margin-top: 20px;
 }
 
-.buttonRow button {
-    flex: 1;
-}
 
 /* ------------------- */
 /* Chatbox Styling     */
@@ -184,9 +177,11 @@ body#settings {
 
 #userInput {
     width: 100%;
+    height: 100%;
     display: flex;
     gap: 10px;
     margin-top: 15px;
+    align-items: stretch;
 }
 
 /* User and Bot Messages */
@@ -219,6 +214,10 @@ body#settings {
     border-bottom-right-radius: 0;
 }
 
+#userInput > * {
+    height: 50%;
+}
+
 .botText span {
     background-color: #e4ffe4;
     border-bottom-left-radius: 0;
@@ -243,7 +242,6 @@ h2 {
     font-size: 24px;
     margin-bottom: 30px;
     color: #333;
-    font-weight: 600;
 }
 
 .error {
@@ -256,4 +254,11 @@ h2 {
     color: green;
     font-size: 14px;
     margin-top: 5px;
+}
+
+h2 {
+    font-family: 'IBM Plex Sans', sans-serif; /* Apply the chosen font */
+    font-size: 2.5em; /* Adjust the font size as needed */
+    color: #333; /* Set the text color */
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); /* Add a subtle shadow */
 }
