--- a/static/style.css
+++ b/static/style.css
@@ -244,6 +244,17 @@ h2 {
     color: #333;
 }
 
+.loggedUser {
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    font-size: 16px;
+    font-weight: 500;
+    color: black;
+    margin-bottom: 10px;
+    text-align: left;
+}
+
 .error {
     color: red;
     font-size: 14px;
@@ -257,8 +268,6 @@ h2 {
 }
 
 h2 {
-    font-family: 'IBM Plex Sans', sans-serif; /* Apply the chosen font */
     font-size: 2.5em; /* Adjust the font size as needed */
-    color: #333; /* Set the text color */
-    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); /* Add a subtle shadow */
+    color: black; /* Set the text color */
 }
