--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
             <button id="buttonInput">Send</button>
         </div>
     </div>
-    <p class="loggedUser">Logged in as: <strong>{{ username }}</strong></p>
-    <button id="topRightBtn" class="btn" onclick="window.location.href='/edit-profile'">Edit Profile</button>
+    <p class="loggedUser">Logged in as: <strong id="user">{{ username }}</strong></p>
+    <button id="topRightBtn" class="btn">Edit Profile</button>
     <script src="../static/script.js"></script>
 </body>
 </html>
