--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -10,7 +10,7 @@
         <form method="POST" action="/edit-profile" class="loginForm">
             <div class="editRow">
                 <label for="name">User:</label>
-                <input type="text" id="user" name="user" value={{user}}>
+                <input type="text" id="user" name="user" value={{user}} readonly>
             </div>
             <div class="editRow">
                 <label for="name">Name:</label>
@@ -43,7 +43,7 @@
             </div>
         </form>
         <p style="margin-top: 15px;">
-            <a href="/chat">Back to Chat</a>
+            <a href="/">Back to Login</a>
         </p>
     </div>
 </body>
