--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="index" onload="getInitialGreeting()">
     <div class="mainContainer">
-        <h2>Therapist Chatbot</h2>
+        <h2>TerraCare</h2>
         <div id="chatbox"></div>
         <div id="userInput">
             <input id="textInput" type="text" placeholder="Type your message...">
